--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -4,9 +4,10 @@
     <title>RESCUED FOOD</title>
     <meta charset="atf-8">
     <meta name="description" content="info">
-    <meta name="keywords" content="comida reutilizar rescued alimentos cursos "
-    
+    <meta name="keywords" content="comida reutilizar rescued alimentos cursos juegos guias ejercicios pruebas ">
+    <link rel="shortcut icon" href="">
 </head>
 <body>
+    <p></p>
 </body>
 </html>
