--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -5,11 +5,12 @@
     <title>RESCUED FOOD</title>
     <meta charset="atf-8">
     <meta name="description" content="info">
-    <meta name="keywords" content="comida reutilizar rescued alimentos cursos juegos guias ejercicios pruebas ">
+    <meta name="keywords" content="comida, reutilizar, rescued, alimentos, cursos, juegos, guias, ejercicios, pruebas ">
     <!--REcomiendo que descarguen la imagen y lo suban a la nube de github, ya que si lo pegan desde un onedrive no se va a poder visualizar-->
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="" type="image/icon">
+    <link rel="stylesheet" href="style.css>
 </head>
 <body>
-    <p></p>
+    <h1>RESCUED FOOD</h1>
 </body>
 </html>
