--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -3,14 +3,15 @@
 <html>
 <head>
     <title>RESCUED FOOD</title>
-    <meta charset="atf-8">
+    <link rel="shortcut icon" href="https://static.vecteezy.com/system/resources/previews/009/597/558/original/orange-fruit-illustration-cartoon-png.png">
+    <meta charset="utf-8">
     <meta name="description" content="info">
     <meta name="keywords" content="comida, reutilizar, rescued, alimentos, cursos, juegos, guias, ejercicios, pruebas ">
     <!--REcomiendo que descarguen la imagen y lo suban a la nube de github, ya que si lo pegan desde un onedrive no se va a poder visualizar-->
-    <link rel="shortcut icon" href="" type="image/icon">
-    <link rel="stylesheet" href="style.css>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>RESCUED FOOD</h1>
+    <img src="">
 </body>
 </html>
