--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -4,6 +4,7 @@
 <head>
     <title>RESCUED FOOD</title>
     <link rel="shortcut icon" href="https://static.vecteezy.com/system/resources/previews/009/597/558/original/orange-fruit-illustration-cartoon-png.png">
+    <link rel=""""
     <meta charset="utf-8">
     <meta name="description" content="info">
     <meta name="keywords" content="comida, reutilizar, rescued, alimentos, cursos, juegos, guias, ejercicios, pruebas ">
