--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <h1>RESCUED FOOD</h1>
     <img src="RESCUED_FOOD__1_-removebg-preview">
     
