--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -8,12 +8,14 @@
     <meta name="description" content="info">
     <meta name="keywords" content="comida, reutilizar, rescued, alimentos, cursos, juegos, guias, ejercicios, pruebas ">
     <!--REcomiendo que descarguen la imagen y lo suban a la nube de github, ya que si lo pegan desde un onedrive no se va a poder visualizar-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header>
-    <h1>RESCUED FOOD</h1>
+    <h1><i>RESCUED FOOD</i></h1>
     <img src="RESCUED_FOOD__1_-removebg-preview">
+    <hr> 
+    <h3>Learn new ways to preserve your food!</h3>
     
 </body>
 </html>
