--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -121,7 +121,7 @@
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                   <p>6473-7364</p>
+                   <p>RescuedFood@gmail.com</p>
             </div>
             <div class="content-foo">
                 <h4>Location</h4>
