--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -120,12 +120,15 @@
                 <p>6473-7364</p>
             </div>
             <div class="content-foo">
-                <h4>Email</h4>
-                   <p>RescuedFood@gmail.com</p>
+                <h4>Contact Us</h4>
+                   <p>victor.mosquera2025@mottach.superate.org.pa/p>
             </div>
             <div class="content-foo">
                 <h4>Location</h4>
-                <p>6473-7364</p>
+                <p>Panama, Panama Oeste, La Chorrera, Playa Leona, Ciudad del Niño, Centro !Supérate!</p>
+            <h4> Our Staff </h4>
+            <h> </h>
+
             </div>
         </div>
         <h2 class="title-end">&copy; RescuedFood Desing </h2>
