--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -120,14 +120,22 @@
                 <p>6473-7364</p>
             </div>
             <div class="content-foo">
+            <h4>Email</h4>
+                   <p> victor.mosquera2025@mottach.superate.org.pa</p>
                 <h4>Contact Us</h4>
                    <p>victor.mosquera2025@mottach.superate.org.pa/p>
+
             </div>
             <div class="content-foo">
                 <h4>Location</h4>
+                <p>Panama, Panama Oeste, La Chorrera, Playa Leona, Ciudad del Nino, Centro !Superate!</p>
+            <h4> Our Staff</h4>
+            <h5> Staff Members Social Media</h5>
+
                 <p>Panama, Panama Oeste, La Chorrera, Playa Leona, Ciudad del Niño, Centro !Supérate!</p>
             <h4> Our Staff </h4>
             <h> </h>
+
 
             </div>
         </div>
