--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -14,10 +14,11 @@
 </head>
 <body>
     <header>
+        <!-- Este es el menu de mi pagina -->
         <nav>
             <a href="#">Account</a>
             <a href="#">Courses</a>
-            <a href="#">Games</a>
+            <a href="#">Download</a>
             <a href="#">Quizzes</a>
             <a href="#">About us</a>
         </nav>
