--- a/downloadyulissa.html
+++ b/downloadyulissa.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content:="Google Play, App store, Rescued Food, alimentos">
 </head>
 <body>
+    <short out
     <nav>
-        <a
+        <a href="#">Account</a>
+        <a href="#">Courses</a>
+        <a href="#">Download</a>
+        <a href="#">Quizzes</a>
+        <a href="#">About us</a>
+    </nav>
 </body>
 </html>
