--- a/footerpaola.html
+++ b/footerpaola.html
@@ -4,4 +4,4 @@
     <meta charset="atf-8">
     <meta name="description" content="Contact us!">
     <meta name="keywords" content="desperdicio, desperidicio de alimentos, recetas de cocina">
-    
+    <script> scr
