--- a/singupashly.html
+++ b/singupashly.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8"> 
 </head>
 <body> 
-    <h2>Learn new ways to preserve your food!</h2> <h3>sing in<h3>
+    <h2>Learn new ways to preserve your food!</h2> <h3>sing up<h3>
         <hr> 
         <img src="https://cdn-icons-png.flaticon.com/512/6522/6522516.png">    
-    <h2>
+    <h2>SingUp</h2>
+    <h3>Name</h3>
+    <h3>Gmail</h3>
+    <h3></h3>
 </body> 
 </html>
