--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -2,146 +2,231 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script> src="http://code.jquery.com/jquery-latest.js"</script>
-        <link href="aboutus.css" rel="stylesheet" type="text/css">
-        <link rel="shortcut icon" href="logo.jpg">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alata&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-        <title>Rescued Food</title>
+    <meta http-equiv="X-UA-Compatible" content="EI=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<!-- Aqui inicia el home -->
 <body>
-    <header>
-        <!-- Este es el menu de mi pagina -->
-        <nav>
-            <a href="#">Account</a>
-            <a href="#">Courses</a>
-            <a href="#">Download</a>
-            <a href="#">Quizzes</a>
-            <a href="#">About us</a>
-        </nav>
-        <section class="texts-header">
-            <h1>Rescued Food</h1>
-        </section>
-        <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L-1.41,152.47 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo" >logo</a>
+            <input type="checkbox" id="menu" />
+            <label for="menu">
+                <!-- Falta la imagen -->
+                <img src="" class="menu-icon" alt="">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Downland</a></li>
+                    <li><a href="#">Account</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-content container">
+            <h1>Rescued</h1>
+            <h2>Food</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Dolor, qui beatae. Nisi iure maxime praesentium 
+                quos sunt nobis explicabo nesciunt nemo maiores magnam suscipit, 
+                soluta dicta debitis eveniet tempora deserunt?
+            </p>
+            <a href="#" class="btn-1">Get To Know Us!</a>
+        </div>
     </header>
-    <main>
-        <section class="container about-us">
-            <h2 class="title">About us</h2>
-            <div class="container-about-us">
-                <img src="img/ED004-247x300.png" alt="" class="image-about-us">
-                <div class="content-texts">
-                    <h3><span></span>Our CEO</h3>
-                    <p>"A well-prepared meal has delicate flavors that must be retained in the mouth to be appreciated." Victor Mosquera (2015).</p>
-                    <p>It all started with an idea, a purpose to teach people how to prepare dishes with the food that people usually throw away because it doesn't look as good as the day they bought it.
-                        At the beginning it was a distant goal since it was not a topic that was very much covered in social networks, but the positive side was that it would give our app the opportunity to shine and show all that we wanted to address in the application.</p>
+<!-- Aquí inicia los "coueses" -->
+    <section class="courses">
+        <div class="courses-content container">
+            <h2>Courses</h2>
+            <p class="txt-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Natus sapiente quibusdam consectetur magnam corporis pariatur 
+                vitae praesentium cumque dolorum. ut, modi expedita aliquam nemo 
+                officia esse debitis quidem minima dolor.
+            </p>
+            <div class="courses-group">
+                <div class="courses-1">
+                    <img src="img/img1.png" alt="">
+                    <h3>The causes of milk wasteage</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, blanditiis atque. Unde vero voluptatum quos 
+                        laudantium ducimus et est ea nobis! 
+                    </p>
+                </div>
+                <div class="courses-1">
+                    <img src="img/img2.png" alt="">
+                    <h3>The consequences of milk wastage</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, blanditiis atque. Unde vero voluptatum quos 
+                        laudantium ducimus et est ea nobis! 
+                    </p>
+                </div>
+                <div class="courses-1">
+                    <img src="img/img3.png" alt="">
+                    <h3>What to do whit milk waste </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, blanditiis atque. Unde vero voluptatum quos 
+                        laudantium ducimus et est ea nobis! 
+                    </p>
+                </div>
+                <div class="courses-1">
+                    <img src="img/img4.png" alt="">
+                    <h3>What happers if I drink spoiled milk </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, blanditiis atque. Unde vero voluptatum quos 
+                        laudantium ducimus et est ea nobis! 
+                    </p>
                 </div>
             </div>
-        </section>
-        <section class="courses">
-            <div class="container">
-                <h2 class="title">Courses</h2>
-                <div class="galery-cour">
-                    <div class="image-cour">
-                        <img src="img/img1.png" alt="" height="500" width="800">
-                        <div class="hover-galery">
-                            <img src="img/icon1.png" alt="">
-                            <p>Our work</p>
-                        </div>
-                    </div>
-                    <div class="image-cour">
-                        <img src="img/img2.png" alt="" height="500" width="800">
-                        <div class="hover-galery">
-                            <img src="img/icon1.png" alt="">
-                            <p>Our work</p>
-                        </div>
-                    </div>
-                    <div class="image-cour">
-                        <img src="img/img3.png" alt="" height="500" width="800">
-                        <div class="hover-galery">
-                            <img src="img/icon1.png" alt="">
-                            <p>Our work</p>
-                        </div>
-                    </div>
-                    <div class="image-cour">
-                        <img src="img/img4.png" alt="" height="500" width="800">
-                        <div class="hover-galery">
-                            <img src="img/icon1.png" alt="">
-                            <p>Our work</p>
-                        </div>
-                    </div>
+            <a href="#" class="btn-1">Information</a>
+        </div>
+    </section>
+<!-- Aquí inicia los "quizzes" -->
+    <main class="quizzes">
+        <div class="quizzes-content container">
+            <h2>Quizzes</h2>
+            <div class="quizzes-group">
+                <div class="quizzes-1">
+                    <!-- Cambiar las imagenes -->
+                    <img src="img/RESCUED_FOOD-removebg-preview.png" alt="">
+                    <h3>Quizzes 1</h3>
+                </div>
+                <div class="quizzes-1">
+                    <img src="img/RESCUED_FOOD-removebg-preview.png" alt="">
+                    <h3>Quizzes 2</h3>
+                </div>
+                <div class="quizzes-1">
+                    <img src="img/RESCUED_FOOD-removebg-preview.png" alt="">
+                    <h3>Quizzes 3</h3>
+                </div>
+                <div class="quizzes-1">
+                    <img src="img/RESCUED_FOOD-removebg-preview.png" alt="">
+                    <h3>Quizzes 4</h3>
                 </div>
             </div>
-        </section>
-        <section class="Download container">
-            <h2 class="title">Downland</h2>
-            <div class="cards">
-                <div class="card">
-                    <img src="img/face1.png" alt="">
-                    <div class="content-text-card">
-                        <h4>name</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, voluptatem corporis. A quis, velit alias maiores incidunt neque optio dolorum assumenda, dolorem eius nesciunt rem mollitia dolores repellendus sit repudiandae!</p>
-                    </div>              
-                </div>
-                <div class="card">
-                    <img src="img/face2.png" alt="">
-                    <div class="content-text-card">
-                        <h4>name</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, eum aperiam. Minima saepe quas modi quos cumque minus, dolores aliquid ad eius, nihil natus nam consequuntur eveniet quam eum iste.</p>
-                    </div>              
-                </div>
-            </div>
-        </section>
-        <section class="about-services">
-            <div class="container">
-                <h2 class="title">our services</h2>
-                <div class="service-cont">
-                    <div class="service ind">
-                    </div>  
-                    <div class="service ind">
-                            <img src="" alt="">
-                            <h3>Name</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium asperiores repellendus, facere consequuntur perspiciatis dolorem consectetur distinctio hic voluptatum maxime cupiditate nobis error ducimus? Quisquam mollitia libero doloribus fuga quae!</p>
-                        </div>
-                        <div class="service ind">
-                            <img src="" alt="">
-                            <h3>Name</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium asperiores repellendus, facere consequuntur perspiciatis dolorem consectetur distinctio hic voluptatum maxime cupiditate nobis error ducimus? Quisquam mollitia libero doloribus fuga quae!</p>
-                        </div>
-                </div>
-            </div>
-        </section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                deserunt veritatis error voluptate eligendi. 
+                Nobis assumenda, perspiciatis distinctio earum omnis modi.
+            </p>
+            <a href="#" class="btn-1" >Information</a>
+        </div>
     </main>
-    <footer>
-        <div class="container-footer">
-            <div class="content-foo">
-                <h4>Phone</h4>
-                <p>6473-7364</p>
+<!-- Aquí inician los "videos" -->
+    <section class="videos">
+        <div class="videos-1">
+            <h2>Videos</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                deserunt veritatis error voluptate eligendi. 
+                Nobis assumenda, perspiciatis distinctio earum omnis modi.
+            </p>
+            <a href="#" class="btn-1">Information</a>
+        </div>
+        <div class="videos-2"></div>
+    </section>
+
+    <section class="videos">
+        <div class="videos-3"></div>
+        <div class="videos-1">
+            <h2>Videos</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                deserunt veritatis error voluptate eligendi. 
+                Nobis assumenda, perspiciatis distinctio earum omnis modi.
+            </p>
+            <a href="#" class="btn-1">Information</a>
+        </div>
+    </section>
+<!-- Aquí inician las "Guides" -->
+    <section class="guide container">
+        <h2>Guide</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="guide-content">
+            <div class="guide-1">
+                <!-- cambiar las imagenes -->
+                <img src="img/ED004-247x300.png" alt="">
+                <h3>Guide 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                    deserunt veritatis error voluptate eligendi. 
+                    Nobis assumenda, perspiciatis distinctio earum omnis modi.
+                </p>
             </div>
-            <div class="content-foo">
-            <h4>Email</h4>
-                   <p> victor.mosquera2025@mottach.superate.org.pa</p>
-                <h4>Contact Us</h4>
-                   <p>victor.mosquera2025@mottach.superate.org.pa/p>
-
+            <div class="guide-1">
+                <img src="img/ED004-247x300.png" alt="">
+                <h3>Guide 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                    deserunt veritatis error voluptate eligendi. 
+                    Nobis assumenda, perspiciatis distinctio earum omnis modi.
+                </p>
             </div>
-            <div class="content-foo">
-                <h4>Location</h4>
-                <p>Panama, Panama Oeste, La Chorrera, Playa Leona, Ciudad del Nino, Centro !Superate!</p>
-            <h4> Our Staff</h4>
-            <h5> Staff Members Social Media</h5>
-
-                <p>Panama, Panama Oeste, La Chorrera, Playa Leona, Ciudad del Niño, Centro !Supérate!</p>
-            <h4> Our Staff </h4>
-            <h> </h>
-
-
+            <div class="guide-1">
+                <img src="img/ED004-247x300.png" alt="">
+                <h3>Guide 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Hic fugiat earum, minus ex atque nihil, perferendis quod incidunt 
+                    deserunt veritatis error voluptate eligendi. 
+                    Nobis assumenda, perspiciatis distinctio earum omnis modi.
+                </p>
             </div>
         </div>
-        <h2 class="title-end">&copy; RescuedFood Desing </h2>
+        <a href="#" class="btn-1">Information</a>
+    </section>
+<!-- Aquí inicia el "footer" -->
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <!-- Cambiar los "lorem" -->
+                    <li><a href="#">ABOUT RESCUED FOOD</a></li>
+                    <li><a href="#">HELP/FAQS</a></li>
+                    <li><a href="#">CARERS</a></li>
+                    <li><a href="#">INTERSHIPS</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">ADVERTISISING</a></li>
+                    <li><a href="#">RESCUED FOOD+</a></li>
+                    <li><a href="#">RECUEDFOODHQ.COM</a></li>
+                    <li><a href="#">REDEEM DIGITAL GUIDES</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
-</body>
 
+
+</body>
 </html>
