--- a/downloadyulissa.html
+++ b/downloadyulissa.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content:="Google Play, App store, Rescued Food, alimentos">
 </head>
 <body>
-    <short out
+    <short out>
     <nav>
         <a href="#">Account</a>
         <a href="#">Courses</a>
