--- a/footerpaola.html
+++ b/footerpaola.html
@@ -1,7 +1,55 @@
-!DOCTYPE <html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="atf-8">
-    <meta name="description" content="Contact us!">
-    <meta name="keywords" content="desperdicio, desperidicio de alimentos, recetas de cocina">
-    <script> scr
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="EI=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    - Aquí inicia el "footer" -->
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <!-- Cambiar los "lorem" -->
+                    <li><a href="#">ABOUT RESCUED FOOD</a></li>
+                    <li><a href="#">HELP/FAQS</a></li>
+                    <li><a href="#">CARERS</a></li>
+                    <li><a href="#">INTERSHIPS</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">ADVERTISISING</a></li>
+                    <li><a href="#">RESCUED FOOD+</a></li>
+                    <li><a href="#">RECUEDFOODHQ.COM</a></li>
+                    <li><a href="#">REDEEM DIGITAL GUIDES</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Lorem</h3>
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+   
+</body>
+</html>
