--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <!-- custom css file link -->
-<link rel="stylesheet" href="CSS/style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    
+
 <!-- header section stars -->
 
 <header class="header">
@@ -25,7 +25,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#aboutus">about us</a>
+        <a href="#about">about us</a>
         <a href="#videos">videos</a>
         <a href="#quizzes">quizzes</a>
         <a href="#review">review</a>
@@ -53,7 +53,6 @@
                 <h3>Guide 01</h3>
                 <div class="price">$17.99/-</div>
             </div>
->>>>>>> 8178f2e834f0f0b6b24cf77acaa49df776ee85e6
         </div>
         <div class="guides-vip">
             <span class="fas fa-times"></span>
@@ -94,7 +93,7 @@
     <h3>Rescued</h3>
     <h4>Food</h4>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto natus laborum numquam nisi commodi, dolorum rerum possimus sequi totam expedita. Pariatur consectetur voluptatibus possimus omnis officiis facere blanditiis, laudantium corrupti!</p>
-    <a href="#" class="btn">Get To Know Us!</a>
+    <a href="#about" class="btn">Get To Know Us!</a>
 </div>
 
 </section>
@@ -110,7 +109,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="img/ED004-247x300.png" width="457" height="500">
+            <img src="img/ED004-247x300.png" width="368" height="500">
         </div>
 
         <div class="content">
@@ -119,7 +118,7 @@
             <p>"A well-prepared meal has delicate flavors that must be retained in the mouth to be appreciated." Victor Mosquera (2015).</p>
             <p>It all started with an idea, a purpose to teach people how to prepare dishes with the food that people usually throw away because it doesn't look as good as the day they bought it.
                 At the beginning it was a distant goal since it was not a topic that was very much covered in social networks, but the positive side was that it would give our app the opportunity to shine and show all that we wanted to address in the application.</p>
-            <a href="#" class="btn">read more</a>
+            <a href="aboutus.html" class="btn">read more</a>
         </div>
 
     </div>
@@ -139,17 +138,17 @@
         <div class="box">
             <img src="img/menu-4.png" width="150">
             <h3>Video 01</h3>
-            <div class="recommended">the consequences of waste</div>
-            <a href="#" class="btn">add your opinion</a>
+            <div class="recommended">The impact of the waste on the Enviroment</div>
+            <a href="https://www.youtube.com/embed/Cti5HQZnTrQ?si=yZZTftoYmXm0kHlZ" class="btn">watch the video</a>
         </div>
 
         <div class="box">
             <img src="img/menu-5.png" width="150">
             <h3>Video 02</h3>
             <div class="recommended">the causes of waste</div>
-            <a href="#" class="btn">add your opinion</a>
+            <a href="https://www.youtube.com/embed/ishA6kry8nc?si=q5JcUmX9ncvJi_-f" class="btn">watch the video</a>
         </div>
-
+<!-- cambiar el "#" por los enlaces que buscaremos en youtube -->
         <div class="box">
             <img src="img/menu-6.png" width="150">
             <h3>Video 03</h3>
@@ -321,6 +320,7 @@
 <!-- review section ends -->
 
 <!-- contact section stars -->
+
 <section class="contact" id="contact">
 
     <h1 class="heading">  <span>contact</span> us </h1>
@@ -348,21 +348,100 @@
 
     </div>
 
+</section>
+
 <!-- contact section ends -->
 
+<!-- guides section stars -->
 
+<section class="guides" id="guides">
 
+    <h1 class="heading"> our <span>guides</span></h1>
 
+    <div class="box-container">
 
+        <div class="box">
+            <div class="image">
+                <img src="img/pngwing.com.png" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">Guide 1</a>
+                <span>by Rescued Food Company / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, delectus.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
 
+        <div class="box">
+            <div class="image">
+                <img src="img/pngwing.com.png" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">Guide 1</a>
+                <span>by Rescued Food Company / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, delectus.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
 
+        <div class="box">
+            <div class="image">
+                <img src="img/pngwing.com.png" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">Guide 1</a>
+                <span>by Rescued Food Company / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, delectus.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
 
+        <div class="box">
+            <div class="image">
+                <img src="img/pngwing.com.png" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">Guide 1</a>
+                <span>by Rescued Food Company / 21st may, 2021</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, delectus.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
 
+    </div>
 
+</section>
 
+<!-- guides section ends -->
 
+<!-- footer section stars -->
 
+<section class="footer">
 
+    <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+    </div>
+
+    <div class="links">
+        <a href="#">home</a>
+        <a href="#">about us</a>
+        <a href="#">videos</a>
+        <a href="#">quizzes</a>
+        <a href="#">review</a>
+        <a href="#c">contact us</a>
+        <a href="#">guides</a>
+        <a href="#">download</a>
+    </div>
+
+    <div class="credit">created by <span>Rescued Food Company</span> | all rights reserved</div>
+
+</section>
+
+ 
 
 <!-- custom js file link -->
 <script src="js/script.js"></script>
