--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -153,28 +153,28 @@
             <img src="img/menu-6.png" width="150">
             <h3>Video 03</h3>
             <div class="recommended">why waste affects us </div>
-            <a href="#" class="btn">add your opinion</a>
+            <a href="#" class="btn">watch the video</a>
         </div>
 
         <div class="box">
             <img src="img/menu-7.png" width="150">
             <h3>Video 04</h3>
             <div class="recommended">how we can solve waste </div>
-            <a href="#" class="btn">add your opinion</a>
+            <a href="https://youtu.be/KpD3joneuwY?si=NyuXXrzZlubIL3aX" class="btn">watch the video</a>
         </div>
 
         <div class="box">
             <img src="img/menu-8.png" width="150">
             <h3>Video 05</h3>
             <div class="recommended">what to do with the food we don't waste</div>
-            <a href="#" class="btn">add your opinion</a>
+            <a href="https://youtu.be/jDg8DQl7ZeQ?si=r-299DnvU26lWvN1" class="btn">watch the video</a>
         </div>
 
         <div class="box">
             <img src="img/menu-9.png" width="150">
             <h3>Video 06</h3>
             <div class="recommended">what happens if we eat spoiled food</div>
-            <a href="#" class="btn">add your opinion</a>
+            <a href="https://youtu.be/9yswzITbAbA?si=YpitZpw2pDb6INFG" class="btn">watch the video</a>
         </div>
 
     </div>
