--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -154,7 +154,7 @@
             <h3>Video 03</h3>
             <div class="recommended">why waste affects us </div>
 
-            <a href="#" class="btn">watch the video</a>
+            <a href="https://youtu.be/Cti5HQZnTrQ?si=va9FHN-1JKohKAzt" class="btn">watch the video</a>
 
         </div>
 
