--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -200,10 +200,10 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="img/img3.png" width="300" height="200">
+            <a href="https://quizizz.com/admin/quiz/5de83de848dcac001b63f16f/food-waste"> <img src="img/img3.png" width="300" height="200"> </a>
             </div>
             <div class="content">
-                <h3>quizze 01</h3>
+                <h3>quizz 01</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -222,10 +222,10 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="img/img1.png" width="300" height="">
+            <a href="https://www.worldwildlife.org/pages/take-the-food-waste-quiz"><img src="img/img1.png" width="300" height="200"> </a>
             </div>
             <div class="content">
-                <h3>quizze 02</h3>
+                <h3>quizz 02</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -244,7 +244,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="img/img2.png" width="300">
+            <a href="https://quizizz.com/admin/quiz/5e8f2f8849c201001bce6356/food-waste-quiz"><img src="img/img2.png" width="300" height="200"> </a>
             </div>
             <div class="content">
                 <h3>quizze 03</h3>
