--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -211,7 +211,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="recommended">Lorem</div>
+                <div class="recommended">Food Waste 1</div>
             </div>
         </div>
 
@@ -233,7 +233,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="recommended">Lorem</div>
+                <div class="recommended">Take the Food Waste</div>
             </div>
         </div>
 
@@ -255,7 +255,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="recommended">Lorem</div>
+                <div class="recommended">Food Waste 2</div>
             </div>
         </div>
 
