--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -150,7 +150,7 @@
         </div>
 <!-- cambiar el "#" por los enlaces que buscaremos en youtube -->
         <div class="box">
-            <img src="img/menu-6.png" width="150">
+            <img src="https://i.ytimg.com/vi/Cti5HQZnTrQ/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCjsjQSE6cIOPnkQMH-Z4xVJ80Bag" width="150">
             <h3>Video 03</h3>
             <div class="recommended">why waste affects us </div>
 
