--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -136,14 +136,14 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="img/menu-4.png" width="150">
+            <img src="https://i.ytimg.com/vi/Cti5HQZnTrQ/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCjsjQSE6cIOPnkQMH-Z4xVJ80Bag" width="150">
             <h3>Video 01</h3>
             <div class="recommended">The impact of the waste on the Enviroment</div>
             <a href="https://www.youtube.com/embed/Cti5HQZnTrQ?si=yZZTftoYmXm0kHlZ" class="btn">watch the video</a>
         </div>
 
         <div class="box">
-            <img src="img/menu-5.png" width="150">
+            <img src="https://i.ytimg.com/vi/ishA6kry8nc/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBLFQaEDjIHOB3x0k4K34YVSkWlbw" width="150">
             <h3>Video 02</h3>
             <div class="recommended">the causes of waste</div>
             <a href="https://www.youtube.com/embed/ishA6kry8nc?si=q5JcUmX9ncvJi_-f" class="btn">watch the video</a>
