--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -150,11 +150,11 @@
         </div>
 <!-- cambiar el "#" por los enlaces que buscaremos en youtube -->
         <div class="box">
-            <img src="https://i.ytimg.com/vi/Cti5HQZnTrQ/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCjsjQSE6cIOPnkQMH-Z4xVJ80Bag" width="150">
+            <img src="https://i.ytimg.com/vi/6RlxySFrkIM/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBt06NBxnt25Zm5FR801LFcW567Ug" width="150">
             <h3>Video 03</h3>
             <div class="recommended">why waste affects us </div>
 
-            <a href="https://youtu.be/Cti5HQZnTrQ?si=va9FHN-1JKohKAzt" class="btn">watch the video</a>
+            <a href="https://youtu.be/6RlxySFrkIM?si=93ygp8pXL9FG-BG2" class="btn">watch the video</a>
 
         </div>
 
