--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -159,21 +159,21 @@
         </div>
 
         <div class="box">
-            <img src="img/menu-7.png" width="150">
+            <img src="https://i.ytimg.com/vi/KpD3joneuwY/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBUMuzB63Z22Xit3OkWJmDJPT1xig" width="150">
             <h3>Video 04</h3>
             <div class="recommended">how we can solve waste </div>
             <a href="https://youtu.be/KpD3joneuwY?si=NyuXXrzZlubIL3aX" class="btn">watch the video</a>
         </div>
 
         <div class="box">
-            <img src="img/menu-8.png" width="150">
+            <img src="https://www.youtube.com/watch?v=jDg8DQl7ZeQ&t=14s&pp=ygVBRm9vZCBleHBpcmF0aW9uIGRhdGVzIGRvbuKAmXQgbWVhbiB3aGF0IHlvdSB0aGluayAtIENhcm9seW4gQmVhbnM%3D" width="150">
             <h3>Video 05</h3>
             <div class="recommended">what to do with the food we don't waste</div>
             <a href="https://youtu.be/jDg8DQl7ZeQ?si=r-299DnvU26lWvN1" class="btn">watch the video</a>
         </div>
 
         <div class="box">
-            <img src="img/menu-9.png" width="150">
+            <img src="https://i.ytimg.com/vi/9yswzITbAbA/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCvApnLV5uXdNFxRqaaWd3I8aN1vg" width="150">
             <h3>Video 06</h3>
             <div class="recommended">what happens if we eat spoiled food</div>
             <a href="https://youtu.be/9yswzITbAbA?si=YpitZpw2pDb6INFG" class="btn">watch the video</a>
