--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="box">
-            <img src="https://www.youtube.com/watch?v=jDg8DQl7ZeQ&t=14s&pp=ygVBRm9vZCBleHBpcmF0aW9uIGRhdGVzIGRvbuKAmXQgbWVhbiB3aGF0IHlvdSB0aGluayAtIENhcm9seW4gQmVhbnM%3D" width="250">
+            <img src="https://i.ytimg.com/vi/jDg8DQl7ZeQ/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCE7uhRj6qBSUpnW0FogS6Q2IsfLw" width="250">
             <h3>Video 05</h3>
             <div class="recommended">what to do with the food we don't waste</div>
             <a href="https://youtu.be/jDg8DQl7ZeQ?si=r-299DnvU26lWvN1" class="btn">watch the video</a>
