--- a/Rescuedfood.html
+++ b/Rescuedfood.html
@@ -423,9 +423,9 @@
     <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.instagram.com/rescued_food2023" class="fab fa-instagram"></a>
         <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
+        <a href="https://pin.it/1wTvf9l" class="fab fa-pinterest"></a>
     </div>
 
     <div class="links">
