--- a/RescuedFoodWebsite.html
+++ b/RescuedFoodWebsite.html
@@ -891,7 +891,7 @@
             </div>
         </div>
 
-        <hr class="linea-1">
+        <hr class="line-1">
 
         <div class="footer-container-2 grid container">
             <div class="footer-content-2">
@@ -918,7 +918,7 @@
             </div>
         </div>
 
-        <hr class="linea-2">
+        <hr class="line-2">
 
         <div class="footer-container-3 grid container">
             <div class="footer-content-3">
